# Wayfinder-CppCore-v2

./: CMakeLists.txt  README  copy_harfbuzz.sh
cpp/Modules/Common/: CMakeLists.txt  ErrorModule.cpp  ErrorObj.cpp  Gps.cpp  Module.cpp  Serial.cpp
cpp/Modules/CtrlHub/: CMakeLists.txt  CtrlHub.cpp  CtrlHubPublic.cpp
cpp/Modules/NavTask/: CMakeLists.txt  DistanceCalc.cpp  DistanceCalc.h  GuiCommandHandler.cpp  GuiCommandHandler.h  NavTask.cpp  NavTaskPublic.cpp  Penalties.h  Point.cpp  Point.h  Route.cpp  Route.h  RouteDatum.cpp  RouteDatum.h
cpp/Modules/NavTask/i386-redhat-linux/: GuiCommandHandlerLinux.cpp
cpp/Modules/NavTask/pocketpc/: GuiCommandHandlerPPC.cpp
cpp/Modules/NavTask/symbian/: GuiCommandHandlerSymbian.cpp
cpp/Modules/Parameter/: CMakeLists.txt  Parameter.cpp  ParameterPublic.cpp
cpp/Modules/QueueSerial/: CMakeLists.txt  QueueSerial.cpp
cpp/Modules/TcpSerial/: CMakeLists.txt  DNSCache.cpp  DNSCache.h  TcpSerial.cpp  TcpThread.cpp  TcpThread.h
cpp/Modules/TcpSymbianSerial/symbian-r6/: CMakeLists.txt  ConnectionControl.cpp  ConnectionControl.h  DNSCache.cpp  DNSCache.h  SendDataReceiver.cpp  SendDataReceiver.h  SocketUser.h  TcpAdmin.cpp  TcpAdmin.h  TcpEvent.cpp  TcpEvent.h  TcpEventGenerator.cpp  TcpEventGenerator.h  TcpSocketEngine.cpp  TcpSocketEngine.h  TcpSocketReader.cpp  TcpSocketReader.h  TcpSocketWriter.cpp  TcpSocketWriter.h  TcpSymbianSerial.cpp
cpp/Modules/UiCtrl/: AudioClipsEnum.h  AudioCtrl.cpp  AudioCtrl.h  AudioCtrlLanguage.h  AudioCtrlNone.cpp  AudioCtrlNone.h  AudioCtrlScript.cpp  AudioCtrlScript.h  AudioCtrlStd.cpp  AudioCtrlStd.h  CMakeLists.txt  GuiCtrl.cpp  GuiCtrl.h  IapParsing.cpp  IapParsing.h  Packet.h  RoutePositionData.cpp  RoutePositionData.h  UiCtrl.cpp  UiCtrlInternal.h
cpp/Shared/: Buffer.cpp  CMakeCache.txt  CMakeLists.txt  DistancePrintingPolicy.cpp  FastTrig.cpp  GenericSettingsData.cpp  GpsSatelliteInfo.cpp  GuiFileOperation.cpp  HintNode.cpp  HintNodeAlgorithms.cpp  HttpTunnelGuiMess.cpp  Log.cpp  LogMaster.cpp  MD5Class.cpp  Matches.cpp  ModuleQueueShared.cpp  Nav2DistanceUtil.cpp  Nav2Error.cpp  Nav2ErrorCs.cpp  Nav2ErrorDa.cpp  Nav2ErrorDe.cpp  Nav2ErrorEl.cpp  Nav2ErrorEn.cpp  Nav2ErrorEs.cpp  Nav2ErrorFi.cpp  Nav2ErrorFr.cpp  Nav2ErrorHu.cpp  Nav2ErrorIt.cpp  Nav2ErrorNl.cpp  Nav2ErrorNo.cpp  Nav2ErrorPl.cpp  Nav2ErrorPt.cpp  Nav2ErrorSl.cpp  Nav2ErrorSv.cpp  Nav2ErrorUs.cpp  Nav2Logging.cpp  NavGunzipUtil.cpp  NavGzipUtil.cpp  OfflineTester.cpp  Output.cpp  (+13 more)
cpp/Shared/CombinedSearch/: CMakeLists.txt  CategoryTree.cpp  CategoryTreeDispatcher.cpp  CategoryTreeElem.cpp  CombinedSearchDataHolder.cpp  CombinedSearchDataTypes.cpp  CombinedSearchDispatcher.cpp  CombinedSearchHistoryItem.cpp  InternalOneSearchQuery.cpp  OneSearchDispatcher.cpp  SharedImageFileUtil.cpp  TmapImageHandler.cpp
cpp/Shared/GuiProt/: CMakeLists.txt  Favorite.cpp  GeneralParamReceiver.cpp  GuiProtFavoriteMess.cpp  GuiProtFileMess.cpp  GuiProtFileMess.h  GuiProtMapMess.cpp  GuiProtMess.cpp  GuiProtMessageHandler.cpp  GuiProtRouteMess.cpp  GuiProtSearchMess.cpp  GuiRequestFailed.cpp  MapClasses.cpp  SearchPrintingPolicy.cpp  SearchPrintingPolicyFactory.cpp  SearchPrintingPolicySwedish.cpp  Serializable.cpp  VectorMapCoordinates.cpp
cpp/Shared/factored/: GetIMEI.impl  ModuleQueue.impl  Selector.impl  TCPSocket.impl
cpp/Shared/h8300-unknown-hms/: ArchFastMath.cpp
cpp/Shared/i386-redhat-linux/: ArchFastMath.cpp  GetIMEI.cpp  ModuleQueue.cpp  Monitor.cpp  Mutex.cpp  OutputFactory.cpp  RecursiveMutex.cpp  Selector.cpp  TCPSocket.cpp  Thread.cpp
cpp/Shared/pocketpc/: ArchFastMath.cpp  Conditional.cpp  GetIMEI.cpp  ModuleQueue.cpp  Monitor.cpp  Mutex.cpp  Nav2ErrorTableWM.cpp  OutputFactory.cpp  RecursiveMutex.cpp  RecursiveMutexImpl.cpp  Thread.cpp
cpp/Shared/symbian-r6/: ArchFastMath.cpp  CMakeLists.txt  Conditional.cpp  FixedFtol2.cpp  GetIMEI.cpp  GetProxy.cpp  InnerThread.cpp  InnerThread.h  MD5Symbian.cpp  ModuleQueue.cpp  Monitor.cpp  Mutex.cpp  Nav2ErrorSymbian.cpp  OutputFactory.cpp  RecursiveMutex.cpp  RecursiveMutexImpl.cpp  Selector.cpp  TCPSocket.cpp  TDesCHolder.cpp  Thread.cpp  ThreadOwner.cpp  TimeOutTimer.cpp  TimerThread.cpp  TlsGlobalData.cpp  WFArrayUtil.cpp
cpp/Targets/AppExamples/: CMakeLists.txt
cpp/Targets/CommonLib/: CMakeLists.txt
cpp/Targets/CommonLib/include/: ConnectionListener.h  ConnectionManager.h  CoreDebugPrint.h  CoreFunctionPrologue.h  Environment.h  FileSystem.h  LogFiles.h  NotCopyable.h  NotificationCenter.h  UnitTestFramework.h
cpp/Targets/CommonLib/src/: ConnectionManager.cpp  CoreDebugPrint.cpp  CoreFunctionPrologue.cpp  Environment.cpp  FileSystem.cpp  NotificationCenter.cpp  UnitTestFramework.cpp
cpp/Targets/GUBI/: CMakeLists.txt
cpp/Targets/GUBIWidget/: CMakeLists.txt
cpp/Targets/GUBIWidget/include/: GUBIWidgetExample.h
cpp/Targets/GUBIWidget/src/: GUBIWidgetExample.cpp
cpp/Targets/MapLib/: CMakeLists.txt
cpp/Targets/MapLib/Export/: Doxygen.conf
cpp/Targets/MapLib/Shared/: .cvsignore
cpp/Targets/Nav2API/: CMakeLists.txt  Doxyfile
cpp/Targets/Nav2lib/: CMakeLists.txt  Nav2.cpp  Nav2.h  Nav2Develop.cpp  Nav2Release.cpp
cpp/Targets/Nav2lib/i386-redhat-linux/: Nav2Linux.cpp
cpp/Targets/Nav2lib/symbian/: SprocketTalker.h  SprocketsEngine.cpp  SprocketsEngine.h
cpp/Targets/PAL/: CMakeLists.txt
cpp/Targets/PAL/include/: PAL.h  PALCommon.h  PALGraphics.h  PALMachineTypes.h  PALNetwork.h  PALRunLoop.h  PALThreading.h  PALTypes.h
cpp/Targets/PAL/src/: PAL.cpp  PALTypes.cpp
cpp/Targets/RegressionTests/: CMakeLists.txt
cpp/Targets/RegressionTests/iPhone/: run_app.sh
cpp/Targets/RegressionTests/include/: DebugTest.h  LocationPositionTest.h  MapDownloadTest.h  MapLibDeleteTest.h  MapLibInitTest.h  MapLibStandaloneTest.h  NetworkConnectionTest.h  OneSearchTest.h  PALNetworkRegTest.h  ReadyToRunListenerTest.h  RegressionTest.h  RegressionTestConnectionManager.h  RegressionTestEnvironment.h  RegressionTestErrorPrinting.h  SleepTest.h  (+6 more)
cpp/Targets/RegressionTestsNG/: CMakeLists.txt  main.cpp
cpp/Targets/WFAPITestClient/: CMakeLists.txt  create_debian_package.sh
(+2501 files in other folders)
